--- a/pokedex/tsconfig.doc.json
+++ b/pokedex/tsconfig.doc.json
@@ -7,6 +7,7 @@
     "include": ["src/**/*.ts"],
     "exclude": [
         "src/test.ts",
-        "src/**/*.spec.ts", 
+        "src/**/*.spec.ts",
+        "src/environments/*.ts",
         "src/app/file-to-exclude.ts"]
   }
